# kiffany

./: .gitignore  CMakeLists.txt  Makefile  README.md  atmosphere.cc  atmosphere.h  atmosphere_test.cc  benchmark.cc  block.cc  block.h  buffer.cc  buffer.h  camera.cc  camera.h  chunk.cc  chunk.h  chunkdata.cc  chunkdata.h  chunkmanager.cc  chunkmanager.h  chunkmap.cc  chunkmap.h  coords.cc  coords.h  flags.cc  flags.h  functions.cc  functions.h  geometry.cc  geometry.h  gl.cc  gl.h  kiffany  lighting.cc  lighting.h  main.cc  main_test.cc  maths.cc  maths.h  matrix.h  (+35 more)
glm/core/: setup.hpp
glm/gtc/: half_float.inl
shaders/: sky.frag  sky.vert  terrain.frag  terrain.vert
